--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../desafio03_PaginaCaptura/style/style.css">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 
-    <link rel="icon" href="/desafio03_PaginaCaptura/images/ico.png" type="image/png">
+    <link rel="icon" href="./images/ico.png" type="image/png">
     <title>Workshop</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
         
                         <!---------- RODAPÉ CONTEÚDO ---------->
         <footer>
-            <img class="picture" src="../desafio03_PaginaCaptura/images/face.jpg" alt="">
+            <img class="picture" src="./images/face.jpg" alt="">
 
             <div class="description">
                 <h3>O Palestrante</h3>
@@ -64,15 +64,15 @@
 
             <div class="socialMedia">
                 <ul>
-                    <a class="instagram" href="https://www.instagram.com/alexcssilva/" target="_blank"><li><img src="../desafio03_PaginaCaptura/icon/instagram.png" alt="instagram/png"></li>
+                    <a class="instagram" href="https://www.instagram.com/alexcssilva/" target="_blank"><li><img src="./icon/instagram.png" alt="instagram/png"></li>
                     </a>
 
-                    <a class="linkedin" href="https://www.linkedin.com/in/alex-silva-396bb9130/" target="_blank"><li><img src="../desafio03_PaginaCaptura/icon/linkedin.png" alt="linkedin/png"></li>
+                    <a class="linkedin" href="https://www.linkedin.com/in/alex-silva-396bb9130/" target="_blank"><li><img src="./icon/linkedin.png" alt="linkedin/png"></li>
                     </a>
 
-                    <a class="youtube" href="https://www.youtube.com/user/Spinred" target="_blank"><li><img src="../desafio03_PaginaCaptura/icon/youtube.png" alt="youtube/png"></li></a>
+                    <a class="youtube" href="https://www.youtube.com/user/Spinred" target="_blank"><li><img src="./icon/youtube.png" alt="youtube/png"></li></a>
 
-                    <a href="mailto:alexcssilva@gmail.com"><li><img src="../desafio03_PaginaCaptura/icon/gmail.png" alt="email/contato"></li></a>
+                    <a href="mailto:alexcssilva@gmail.com"><li><img src="./icon/gmail.png" alt="email/contato"></li></a>
 
                 </ul>
             </div>
